--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
-    "name": "vendor/iwebhooks",
+    "name": "imagina/iwebhooks-module",
     "description": "",
     "type": "asgard-module",
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
         "composer/installers": "~1.0",
-        "idavoll/core-module": "v8.x-dev"
+        "imagina/core-module": "v8.x-dev",
+        "imagina/ihelpers-module": "v8.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
@@ -18,20 +19,17 @@
             "Modules\\": "Modules/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "Imagina Colombia",
+            "email": "proyectos@imaginacolombia.com"
         }
     ],
     "extra": {
-        "laravel": {
-            "providers": [],
-            "aliases": {
-
-            }
+        "branch-alias": {
+            "dev-v8.x": "8.0.x-dev"
         }
     },
     "autoload": {
